--- a/layout/about.html
+++ b/layout/about.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 
 <head>
-	<title> ПСК | Проекты </title>
+	<title> ПСК | О компании </title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -82,9 +82,9 @@
         <div class="menu__container">
             <ul class="menu__list">
                 <li class="menu__item"><a href="/" class="menu__link ">ГЛАВНАЯ</a></li>
-                <li class="menu__item"><a href="/about.html" class="menu__link ">О КОМПАНИИ</a></li>
+                <li class="menu__item"><a href="/about.html" class="menu__link active">О КОМПАНИИ</a></li>
                 <li class="menu__item"><a href="/products.html" class="menu__link ">ПРОДУКЦИЯ И УСЛУГИ</a></li>
-                <li class="menu__item"><a href="/projects.html" class="menu__link active">ПРОЕКТЫ</a></li>
+                <li class="menu__item"><a href="/projects.html" class="menu__link ">ПРОЕКТЫ</a></li>
                 <li class="menu__item"><a href="/news.html" class="menu__link ">НОВОСТИ</a></li>
                 <li class="menu__item"><a href="/contacts.html" class="menu__link ">КОНТАКТЫ</a></li>
             </ul>
@@ -100,43 +100,225 @@
 								<a href="/" class="navigation__link">Главная</a>
 							</li>
 							<li class="navigation__item">
-								<a class="navigation__link active">Проекты</a>
+								<a class="navigation__link active">О компании</a>
 							</li>
 						</ul>
 						<h1 class="main__title title-xl">
-							Проекты
+							О компании
 						</h1>
 					</div>
 				</div>
-				<canvas id="gradient-canvas" data-transition-in></canvas>
+				<canvas id="gradient-canvas" data-transition-in>
 			</section>
-			<section class="page__projects projects projects-offset">
-				<div class="projects__container">
-					<div class="projects__grid">
-						<a href="/project.html" class="projects__grid-item project">
-							<span class="project__image">
-								<picture><source srcset="img/projects/01.webp"type="image/webp"><img src="img/projects/01.jpg" class="cover-image" alt="project image"></picture>
-							</span>
-							<span class="project__caption">
-								Укомплектован объект ВЛ 110 кВ «Снежная-КС-7»
-							</span>
-						</a>
-						<a href="/project.html" class="projects__grid-item project">
-							<span class="project__image">
-								<picture><source srcset="img/projects/02.webp"type="image/webp"><img src="img/projects/02.jpg" class="cover-image" alt="project image"></picture>
-							</span>
-							<span class="project__caption">
-								Реконструкция <br> подстанции Портовая
-							</span>
-						</a>
-						<a href="/project.html" class="projects__grid-item project">
-							<span class="project__image">
-								<picture><source srcset="img/projects/03.webp"type="image/webp"><img src="img/projects/03.jpg" class="cover-image" alt="project image"></picture>
-							</span>
-							<span class="project__caption">
-								Кабельная линия 10кВ Крыловка РТП-109
-							</span>
-						</a>
+			<section class="page__about about">
+				<div class="about__container">
+					<div class="about__body">
+						<div class="about__text article__content">
+							<div>
+								<h3>
+									ООО «ПСК СтройИнвест» – комплексные поставки
+									в энергетической отрасли для строительства
+									и&nbsp;обслуживания объектов.
+								</h3>
+								<p>
+									«Компания «ПСК СтройИнвест» предлагает широкий спектр материалов <br>
+									и оборудования для электрических подстанций и сетевого хозяйства любого напряжения.
+								</p>
+								<p>
+									Работая с нашими клиентами, мы уделяем особое внимание построению долгосрочных
+									взаимовыгодных и&nbsp;комфортных взаимоотношений. В компании «ПСК СтройИнвест»
+									работают
+									более 100
+									специалистов, но высокие требования заказчиков не дают нам останавливаться в
+									развитии,
+									заставляют непрерывно совершенствовать бизнес-процессы внутри компании и повышать
+									качество
+									услуг.
+								</p>
+							</div>
+						</div>
+						<div class="about__numbers">
+							<div class="about__numbers-item">
+								<div class="about__numbers-value">
+									с <span class="count-number">2014</span>
+								</div>
+								<div class="about__numbers-text">
+									года в энергетической отрасли
+								</div>
+							</div>
+							<div class="about__numbers-item">
+								<div class="about__numbers-value">
+									<span class="count-number">18282</span>м²
+								</div>
+								<div class="about__numbers-text">
+									Площадей хранения
+								</div>
+							</div>
+							<div class="about__numbers-item">
+								<div class="about__numbers-value">
+									<span class="count-number">6850</span>м²
+								</div>
+								<div class="about__numbers-text">
+									Основной склад в г. Казань
+								</div>
+							</div>
+							<div class="about__numbers-item">
+								<div class="about__numbers-value">
+									<span class="count-number">1500</span>м²
+								</div>
+								<div class="about__numbers-text">
+									Распределительный склад в г. Набережные Челны
+								</div>
+							</div>
+							<div class="about__numbers-item">
+								<div class="about__numbers-value">
+									<span class="count-number">3200</span>м²
+								</div>
+								<div class="about__numbers-text">
+									Распределительный склад в г. Бугульма
+								</div>
+							</div>
+							<div class="about__numbers-item">
+								<div class="about__numbers-value">
+									<span class="count-number">2232</span>м²
+								</div>
+								<div class="about__numbers-text">
+									Распределительный склад в г. Буинск
+								</div>
+							</div>
+							<div class="about__numbers-item">
+								<div class="about__numbers-value">
+									<span class="count-number">4500</span>м²
+								</div>
+								<div class="about__numbers-text">
+									Распределительный склад в г. Чистополь
+								</div>
+							</div>
+							<div class="about__numbers-item">
+								<div class="about__numbers-value">
+									<span class="count-number">141</span>
+								</div>
+								<div class="about__numbers-text">
+									Сотрудник в штате
+								</div>
+							</div>
+						</div>
+						<div class="about__text article__content">
+							<div>
+								<h3>
+									Стандарты
+								</h3>
+								<p>
+									Мы непрерывно повышаем внутренние стандарты и отлаживаем процессы внутри организации
+									для того, чтобы соответствовать самым высоким требованиям заказчика.
+								</p>
+							</div>
+						</div>
+						<div class="about__text article__content">
+							<div>
+								<h3>
+									Гарантии
+								</h3>
+								<p>
+									На весь ассортимент поставляемых материалов и оборудования действуют фирменные
+									гарантии производителей.
+								</p>
+							</div>
+						</div>
+						<div class="about__video video__body">
+							<div class="video__main">
+								<h2 class="video__title title-xl">
+									Видео о нас
+								</h2>
+								<div class="video__desc">
+									Посмотрите, как устроены наши логистические комплексы и&nbsp;производства
+								</div>
+							</div>
+							<a href="" class="video__link icon-play">
+								<picture><source srcset="img/benefits/01.webp"type="image/webp"><img src="img/benefits/01.jpg" class="cover-image" alt="video image"></picture>
+							</a>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="page__equipment equipment">
+				<div class="equipment__container">
+					<div class="equipment__body">
+						<h2 class="equipment__title title-lg">
+							Наше оборудование
+						</h2>
+						<div class="equipment__subtitle">
+							Компания «ПСК СтройИнвест» предлагает широкий спектр материалов и оборудования для
+							электрических подстанций и сетевого хозяйства любого напряжения.
+						</div>
+						<div class="equipment__items">
+							<div class="equipment__item">
+								<div class="equipment__caption">
+									Низковольтное оборудование
+								</div>
+								<ul class="equipment__list">
+									<li class="equipment__list-item">Стабилизаторы напряжения</li>
+									<li class="equipment__list-item">Автоматические выключатели</li>
+									<li class="equipment__list-item">Электросчетчики</li>
+									<li class="equipment__list-item">Устройства защиты от дифференциального тока</li>
+									<li class="equipment__list-item">Преобразователи напряжения</li>
+									<li class="equipment__list-item">Коммутационные устройства</li>
+								</ul>
+							</div>
+							<div class="equipment__item">
+								<div class="equipment__caption">
+									Оборудование среднего напряжения
+								</div>
+								<ul class="equipment__list">
+									<li class="equipment__list-item">Щитовое оборудование 10 кВ</li>
+									<li class="equipment__list-item">ЩСН, ВРУ, УКРМ</li>
+									<li class="equipment__list-item">Шкафы РЗА</li>
+									<li class="equipment__list-item">Трансформаторы: силовые сухие (ТСЗ, ТСЗЛ);
+										разделительные (ТРТ); измерительные</li>
+									<li class="equipment__list-item">Источники бесперебойного питания, аккумуляторные
+										батареи</li>
+								</ul>
+							</div>
+							<div class="equipment__item">
+								<div class="equipment__caption">
+									Высоковольтное оборудование
+								</div>
+								<ul class="equipment__list">
+									<div class="equipment__list-item">Источники электроэнергии высокого напряжения</div>
+									<div class="equipment__list-item">Трансформаторы</div>
+									<div class="equipment__list-item">Распределительные подстанции</div>
+								</ul>
+							</div>
+							<div class="equipment__item">
+								<div class="equipment__caption">
+									Кабельно-проводниковая продукция
+								</div>
+								<ul class="equipment__list">
+									<li class="equipment__list-item">Кабели на напряжение 0,66 – 330кВ</li>
+									<li class="equipment__list-item">Кабельная арматура</li>
+									<li class="equipment__list-item">Оборудование для монтажа кабельных линий</li>
+								</ul>
+							</div>
+							<div class="equipment__item">
+								<div class="equipment__caption">
+									Металлоконструкции
+								</div>
+								<ul class="equipment__list">
+									<li class="equipment__list-item">Металлопрокат</li>
+									<li class="equipment__list-item">Балки, фермы</li>
+									<li class="equipment__list-item">Металлоконструкции для быстровозводимых зданий</li>
+								</ul>
+							</div>
+							<div class="equipment__item">
+								<div class="equipment__caption">
+									Опоры ЛЭП
+								</div>
+								<ul class="equipment__list">
+									<li class="equipment__list-item">Деревянные опоры ЛЭП</li>
+									<li class="equipment__list-item">Опоры ЛЭП железобетонные</li>
+								</ul>
+							</div>
+						</div>
 					</div>
 				</div>
 			</section>
