--- a/src/site/templates/components/breadcrumbs/breadcrumbs.htm
+++ b/src/site/templates/components/breadcrumbs/breadcrumbs.htm
@@ -1,5 +1,3 @@
-<div id="bread-crumbs">
-  <ul class="holder">
-    {{INCLUDE:CONTENT}}
-  </ul>
-</div>
+<ul class="main__navigation navigation">
+              {{INCLUDE:CONTENT}}
+            </ul>
