--- a/src/site/templates/components/breadcrumbs/breadcrumbs__link--active.htm
+++ b/src/site/templates/components/breadcrumbs/breadcrumbs__link--active.htm
@@ -1,1 +1,3 @@
-<li>{{TITLE}}</li>
+<li class="navigation__item">
+                <a class="navigation__link active">{{TITLE}}</a>
+              </li>
