--- a/src/site/templates/components/navigation/navigation.htm
+++ b/src/site/templates/components/navigation/navigation.htm
@@ -1,3 +1,7 @@
-<ul>
-  {{CONTENT}}
-</ul>
+<nav class="header__menu menu">
+        <div class="menu__container">
+            <ul class="menu__list">
+                {{CONTENT}}
+            </ul>
+        </div>
+    </nav>
