--- a/src/site/templates/components/navigation/navigation__elem-active.htm
+++ b/src/site/templates/components/navigation/navigation__elem-active.htm
@@ -1,1 +1,1 @@
-<li class="active"><a href="{{LINK}}">{{TITLE}}</a></li>
+<li class="menu__item"><a href="{{LINK}}" class="menu__link active">{{TITLE}}</a>{{LIST}}</li>
