--- a/src/site/templates/components/navigation/navigation__elem.htm
+++ b/src/site/templates/components/navigation/navigation__elem.htm
@@ -1,1 +1,1 @@
-<li{{CLASS}}><a href="{{LINK}}">{{TITLE}}</a>{{LIST}}</li>
+<li class="menu__item"><a href="{{LINK}}" class="menu__link">{{TITLE}}</a>{{LIST}}</li>
