--- a/src/site/templates/components/pagination/c-pagination__item.htm
+++ b/src/site/templates/components/pagination/c-pagination__item.htm
@@ -1,3 +1,4 @@
-<li class="{{CLASS}}">
-  <a href="{{LINK}}">{{NUMBER}}</a>
-</li>
+<li class="pagination__item">
+                    <a href="{{LINK}}" class="pagination__link">{{NUMBER}}</a>
+                  </li>
+                  
