--- a/layout/news.html
+++ b/layout/news.html
@@ -10,7 +10,7 @@
 	<meta name="description" content="">
 
 	<!-- favicon -->
-	<!-- <link rel="icon" type="image/png" sizes="256x256" href="/android-chrome-256x256.png">
+	<link rel="icon" type="image/png" sizes="256x256" href="/android-chrome-256x256.png">
 	<link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -18,7 +18,7 @@
 	<link rel="manifest" href="/site.webmanifest">
 	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ff0000">
 	<meta name="msapplication-TileColor" content="#ffffff">
-	<meta name="theme-color" content="#ffffff"> -->
+	<meta name="theme-color" content="#ffffff">
 	<!-- favicon -->
 
 	<!-- Open Graph  -->
@@ -40,9 +40,9 @@
 	<meta property="twitter:image:src" content="preview image">
 	<!-- Twitter -->
 
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20221206230147">
-	<link rel="stylesheet" href="css/reset.min.css?_v=20221206230147">
-	<link rel="stylesheet" href="css/style.min.css?_v=20221206230147">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20221208231134">
+	<link rel="stylesheet" href="css/reset.min.css?_v=20221208231134">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221208231134">
 
 
 </head>
@@ -82,7 +82,7 @@
         <div class="menu__container">
             <ul class="menu__list">
                 <li class="menu__item"><a href="/" class="menu__link ">ГЛАВНАЯ</a></li>
-                <li class="menu__item"><a href="" class="menu__link ">О КОМПАНИИ</a></li>
+                <li class="menu__item"><a href="/about.html" class="menu__link ">О КОМПАНИИ</a></li>
                 <li class="menu__item"><a href="/products.html" class="menu__link ">ПРОДУКЦИЯ И УСЛУГИ</a></li>
                 <li class="menu__item"><a href="/projects.html" class="menu__link ">ПРОЕКТЫ</a></li>
                 <li class="menu__item"><a href="/news.html" class="menu__link active">НОВОСТИ</a></li>
@@ -107,8 +107,8 @@
 							Новости
 						</h1>
 					</div>
-					<canvas id="gradient-canvas" data-transition-in>
 				</div>
+				<canvas id="gradient-canvas" data-transition-in></canvas>
 			</section>
 			<div class="page__news news news-offset">
 				<div class="news__container">
@@ -130,7 +130,9 @@
 						<div class="news__item">
 							<div class="news__item-body">
 								<h3 class="news__item-title title-md">
-									Постановка материалов для реконструкции
+									<a href="/article.html" class="news__item-link">
+										Постановка материалов для реконструкции
+									</a>
 								</h3>
 								<time datetime="2022-09-30" class="news__item-time">
 									30 сентября
@@ -144,14 +146,16 @@
 									Подробнее
 								</a>
 							</div>
-							<div class="news__item-image">
+							<a href="/article.html" class="news__item-image">
 								<picture><source srcset="img/news/01.webp"type="image/webp"><img src="img/news/01.jpg" class="cover-image" alt="news picture"></picture>
-							</div>
+							</a>
 						</div>
 						<div class="news__item">
 							<div class="news__item-body">
 								<h3 class="news__item-title title-md">
-									Награждение по итогам года
+									<a href="/article.html" class="news__item-link">
+										Награждение по итогам года
+									</a>
 								</h3>
 								<time datetime="2022-01-25" class="news__item-time">
 									25 января
@@ -164,15 +168,17 @@
 									Подробнее
 								</a>
 							</div>
-							<div class="news__item-image">
+							<a href="/article.html" class="news__item-image">
 								<picture><source srcset="img/news/02.webp"type="image/webp"><img src="img/news/02.jpg" class="cover-image" alt="news picture"></picture>
-							</div>
+							</a>
 						</div>
 						<div class="news__item">
 							<div class="news__item-body">
 								<h3 class="news__item-title title-md">
-									Поставка материалов для реконструкции <br>
-									ПС 110 кВ Учалы
+									<a href="/article.html" class="news__item-link">
+										Поставка материалов для реконструкции <br>
+										ПС 110 кВ Учалы
+									</a>
 								</h3>
 								<time datetime="2021-11-19" class="news__item-time">
 									19 ноября 2021 г.
@@ -185,14 +191,16 @@
 									Подробнее
 								</a>
 							</div>
-							<div class="news__item-image">
+							<a href="/article.html" class="news__item-image">
 								<picture><source srcset="img/news/03.webp"type="image/webp"><img src="img/news/03.jpg" class="cover-image" alt="news picture"></picture>
-							</div>
+							</a>
 						</div>
 						<div class="news__item">
 							<div class="news__item-body">
 								<h3 class="news__item-title title-md">
-									Татарстанский международный форум по энергетике и энергоресурсоэффектив<wbr>ности
+									<a href="/article.html" class="news__item-link">
+										Татарстанский международный форум по энергетике и энергоресурсоэффектив<wbr>ности
+									</a>
 								</h3>
 								<time datetime="2021-11-19" class="news__item-time">
 									19 ноября 2021 г.
@@ -204,14 +212,16 @@
 									Подробнее
 								</a>
 							</div>
-							<div class="news__item-image">
+							<a href="/article.html" class="news__item-image">
 								<picture><source srcset="img/news/04.webp"type="image/webp"><img src="img/news/04.jpg" class="cover-image" alt="news picture"></picture>
-							</div>
+							</a>
 						</div>
 						<div class="news__item">
 							<div class="news__item-body">
 								<h3 class="news__item-title title-md">
-									Международный форум Kazan Digital Week – 2021
+									<a href="/article.html" class="news__item-link">
+										Международный форум Kazan Digital Week – 2021
+									</a>
 								</h3>
 								<time datetime="2021-11-19" class="news__item-time">
 									19 ноября 2021 г.
@@ -223,14 +233,16 @@
 									Подробнее
 								</a>
 							</div>
-							<div class="news__item-image">
+							<a href="/article.html" class="news__item-image">
 								<picture><source srcset="img/news/05.webp"type="image/webp"><img src="img/news/05.jpg" class="cover-image" alt="news picture"></picture>
-							</div>
+							</a>
 						</div>
 						<div class="news__item">
 							<div class="news__item-body">
 								<h3 class="news__item-title title-md">
-									С праздником Курбан-байрам!
+									<a href="/article.html" class="news__item-link">
+										С праздником Курбан-байрам!
+									</a>
 								</h3>
 								<time datetime="2021-11-19" class="news__item-time">
 									19 ноября 2021 г.
@@ -242,9 +254,9 @@
 									Подробнее
 								</a>
 							</div>
-							<div class="news__item-image">
+							<a href="/article.html" class="news__item-image">
 								<picture><source srcset="img/news/06.webp"type="image/webp"><img src="img/news/06.jpg" class="cover-image" alt="news picture"></picture>
-							</div>
+							</a>
 						</div>
 					</div>
 					<div class="news__more-btn">
@@ -257,7 +269,7 @@
 		</main>
 		<footer class="footer">
     <div class="footer__body footer-body">
-        <div class="footer-body__container">
+        <div class="footer-body__container border-top">
             <div class="footer-body__main">
                 <div class="footer-body__logo">
                     <img src="img/logo-black.svg" alt="logo">
@@ -274,7 +286,7 @@
                     О компании
                 </li>
                 <li class="footer-body__list-item">
-                    <a href="" class="footer-body__list-link">
+                    <a href="/about.html" class="footer-body__list-link">
                         Основная информация
                     </a>
                 </li>
@@ -284,17 +296,17 @@
                     </a>
                 </li>
                 <li class="footer-body__list-item">
-                    <a href="" class="footer-body__list-link">
+                    <a href="/partners.html" class="footer-body__list-link">
                         Партнеры
                     </a>
                 </li>
                 <li class="footer-body__list-item">
-                    <a href="" class="footer-body__list-link">
+                    <a href="/team.html" class="footer-body__list-link">
                         Руководство
                     </a>
                 </li>
                 <li class="footer-body__list-item">
-                    <a href="" class="footer-body__list-link">
+                    <a href="/customers.html" class="footer-body__list-link">
                         Заказчики
                     </a>
                 </li>
@@ -421,14 +433,14 @@
     </div>
 </footer>
 	</div>
-	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20221206230147"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.9.6/lottie.min.js?_v=20221206230147"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20221206230147"></script>
+	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20221208231134"></script>
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.9.6/lottie.min.js?_v=20221208231134"></script> -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20221208231134"></script>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20221206230147"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20221206230147"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20221208231134"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20221208231134"></script>
 
-<script src="js/app.min.js?_v=20221206230147"></script>
+<script src="js/app.min.js?_v=20221208231134"></script>
 
 </body>
 
