--- a/layout/reviews.html
+++ b/layout/reviews.html
@@ -10,7 +10,7 @@
 	<meta name="description" content="">
 
 	<!-- favicon -->
-	<!-- <link rel="icon" type="image/png" sizes="256x256" href="/android-chrome-256x256.png">
+	<link rel="icon" type="image/png" sizes="256x256" href="/android-chrome-256x256.png">
 	<link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -18,7 +18,7 @@
 	<link rel="manifest" href="/site.webmanifest">
 	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ff0000">
 	<meta name="msapplication-TileColor" content="#ffffff">
-	<meta name="theme-color" content="#ffffff"> -->
+	<meta name="theme-color" content="#ffffff">
 	<!-- favicon -->
 
 	<!-- Open Graph  -->
@@ -40,9 +40,9 @@
 	<meta property="twitter:image:src" content="preview image">
 	<!-- Twitter -->
 
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20221206230147">
-	<link rel="stylesheet" href="css/reset.min.css?_v=20221206230147">
-	<link rel="stylesheet" href="css/style.min.css?_v=20221206230147">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20221208231134">
+	<link rel="stylesheet" href="css/reset.min.css?_v=20221208231134">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221208231134">
 
 
 </head>
@@ -82,7 +82,7 @@
         <div class="menu__container">
             <ul class="menu__list">
                 <li class="menu__item"><a href="/" class="menu__link ">ГЛАВНАЯ</a></li>
-                <li class="menu__item"><a href="" class="menu__link ">О КОМПАНИИ</a></li>
+                <li class="menu__item"><a href="/about.html" class="menu__link ">О КОМПАНИИ</a></li>
                 <li class="menu__item"><a href="/products.html" class="menu__link ">ПРОДУКЦИЯ И УСЛУГИ</a></li>
                 <li class="menu__item"><a href="/projects.html" class="menu__link ">ПРОЕКТЫ</a></li>
                 <li class="menu__item"><a href="/news.html" class="menu__link ">НОВОСТИ</a></li>
@@ -111,7 +111,7 @@
 						</h1>
 					</div>
 				</div>
-				<canvas id="gradient-canvas" data-transition-in>
+				<canvas id="gradient-canvas" data-transition-in></canvas>
 			</section>
 			<div class="page__sert sert">
 				<div class="sert__container">
@@ -152,7 +152,7 @@
 		</main>
 		<footer class="footer">
     <div class="footer__body footer-body">
-        <div class="footer-body__container">
+        <div class="footer-body__container border-top">
             <div class="footer-body__main">
                 <div class="footer-body__logo">
                     <img src="img/logo-black.svg" alt="logo">
@@ -169,7 +169,7 @@
                     О компании
                 </li>
                 <li class="footer-body__list-item">
-                    <a href="" class="footer-body__list-link">
+                    <a href="/about.html" class="footer-body__list-link">
                         Основная информация
                     </a>
                 </li>
@@ -179,17 +179,17 @@
                     </a>
                 </li>
                 <li class="footer-body__list-item">
-                    <a href="" class="footer-body__list-link">
+                    <a href="/partners.html" class="footer-body__list-link">
                         Партнеры
                     </a>
                 </li>
                 <li class="footer-body__list-item">
-                    <a href="" class="footer-body__list-link">
+                    <a href="/team.html" class="footer-body__list-link">
                         Руководство
                     </a>
                 </li>
                 <li class="footer-body__list-item">
-                    <a href="" class="footer-body__list-link">
+                    <a href="/customers.html" class="footer-body__list-link">
                         Заказчики
                     </a>
                 </li>
@@ -316,14 +316,14 @@
     </div>
 </footer>
 	</div>
-	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20221206230147"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.9.6/lottie.min.js?_v=20221206230147"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20221206230147"></script>
+	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20221208231134"></script>
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.9.6/lottie.min.js?_v=20221208231134"></script> -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20221208231134"></script>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20221206230147"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20221206230147"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20221208231134"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20221208231134"></script>
 
-<script src="js/app.min.js?_v=20221206230147"></script>
+<script src="js/app.min.js?_v=20221208231134"></script>
 
 </body>
 
