--- a/src/site/templates/components/breadcrumbs/breadcrumbs__link.htm
+++ b/src/site/templates/components/breadcrumbs/breadcrumbs__link.htm
@@ -1,1 +1,3 @@
-<li><a href='{{LINK}}'>{{TITLE}}</a></li>
+<li class="navigation__item">
+                <a href="{{LINK}}" class="navigation__link">{{TITLE}}</a>
+              </li>
