--- a/src/site/templates/components/pagination/c-pagination__item--active.htm
+++ b/src/site/templates/components/pagination/c-pagination__item--active.htm
@@ -1,3 +1,3 @@
-<li class="act">
-  <span>{{NUMBER}}</span>
-</li>
+<li class="pagination__item">
+                    <a href="" class="pagination__link active">{{NUMBER}}</a>
+                  </li>
